# kanji-lists

./: .gitignore  LICENSE  README.rst  dev-requirements.txt  generate.py  helper.py  pyproject.toml
.github/workflows/: build.yml  python-package.yml
codegen/: README.jinja2  __init__.jinja2  kanji_lists.jinja2  kanji_lists.json
kanji_lists/: __init__.py  jouyou.py  kanji_lists.py  kyouiku.py
tests/: test_jouyou.py  test_kanji_lists.py  test_kyouiku.py
