[tool.poetry]
name = "kanji-lists"
version = "0.1.0"
description = "Collection of Japanese Kanji lists"
authors = ["Daniel Lemm <61800298+ffe4@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jinja2 = "^2.11.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
